--- a/code/xrf/xrf-explorer.ipynb
+++ b/code/xrf/xrf-explorer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5197b779448d470f9c532b57d1b2475e",
+       "model_id": "d3c847bfab1d486286bcb383e8938121",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,10 +40,10 @@
     {
      "data": {
       "text/plain": [
-       "<xrf_interact.XRFInteract at 0x7f16fe827610>"
+       "<xrf_interact.XRFInteract at 0x7fac2c91e6d0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
