--- a/code/xrf/xrf-explorer.ipynb
+++ b/code/xrf/xrf-explorer.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget"
+    "%matplotlib widget\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -26,7 +27,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3c847bfab1d486286bcb383e8938121",
+       "model_id": "3c1623f6c6f347bda8023c22dbc908b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,7 +41,7 @@
     {
      "data": {
       "text/plain": [
-       "<xrf_interact.XRFInteract at 0x7fac2c91e6d0>"
+       "<xrf_interact.XRFInteract at 0x7fb9a41f4190>"
       ]
      },
      "execution_count": 3,
@@ -49,17 +50,37 @@
     }
    ],
    "source": [
-    "show_xrf('scan_3624.h5')"
+    "show_xrf('scan_3624.h5', fig=plt.figure(constrained_layout=True, figsize=[6.6, 6.4]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.gcf().savefig('xrf_snap.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6.6, 6.4])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.gcf().get_size_inches()"
    ]
   },
   {
