fix typos in temperature explorer

--- a/code/temperture/temperature-explorer.ipynb
+++ b/code/temperture/temperature-explorer.ipynb
@@ -376,10 +376,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The top plot shows monthly avearge, standard deviation, and min/max bands for each month in the data set.\n",
+    "The top plot shows monthly average, standard deviation, and min/max bands for each month in the data set.\n",
     "\n",
-    "By clicking on points in the top (all data aggregated by moth) axes we can add curves to the middle (a month of data agregated by day) axes, and by clicking on data in the middle axes we can add data to the bottom (one day of hourly data) axes."
+    "By clicking on points in the top (all data aggregated by month) axes we can add curves to the middle (a month of data aggregated by day) axes, and by clicking on data in the middle axes we can add data to the bottom (one day of hourly data) axes."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
